--- a/books-app/src/main/resources/application.yml
+++ b/books-app/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
       client:
         registration:
           github:
-            client-id: Iv1.597b0bff17a1ca09
-            client-secret: 014b28cd51be2222a20760f3844b2324413ef933
+            client-id: <github-clientid>
+            client-secret: <github-clientSecret>
   application:
     name: betterreads-books-app
   main:
